--- a/style.css
+++ b/style.css
@@ -6,3 +6,73 @@
   font-weight: 400;
   font-style: normal;
 }
+.display-flex  {
+    display: flex;
+}
+.bg-light {
+    background-color: rgba(255,144,14,0.1);
+}
+
+.text-color {
+    color: #424242;
+
+}
+.text-light-gray {
+       color: #424242;
+}
+.nav-bar {
+    justify-content: space-between;
+    align-items: center;
+}
+.brand {
+    font-weight: 700;
+    font-size: 45px;
+}
+.nav-iteam {
+    list-style: none;
+    margin-right: 30px;
+
+}
+.nav-link {
+    text-decoration: none;
+    font-weight: 500;
+}
+.nav-bar, .banner {
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+} 
+.banner-container {
+    max-width: 850px;
+    margin: 0 auto;
+    text-align: center;
+    
+}
+img {
+    width: 100%;
+    height: 400px;
+    width: 850px;
+}
+.banner-head {
+    font-weight: 700;
+    font-size: 2rem;
+}
+.banner-pragraph {
+    
+}
+.banner-btn button{
+    background-color: #FF900E;
+    color: white;
+    padding: 20px 25px;
+    font-size: 1.25rem;
+    font-weight: 600;
+    border-radius: 8px;
+    border: none;
+    margin-bottom: 30px;
+}
+@media screen and (max-width:576px) {
+    .nav-bar, .nav-link {
+        flex-direction: column;
+    }
+    
+}
